# MWEngine

./: .gitignore  AndroidManifest.xml  CMakeLists.txt  LICENSE  README.md  build.bat  build.gradle  build.sh  build.xml  clean.sh  local.properties  proguard-rules.pro  project.properties  settings.gradle  test.sh
gradle/wrapper/: gradle-wrapper.properties
jni/: Android.mk  Android_test.mk  Application.mk  Application_test.mk  adsr.cpp  adsr.h  arpeggiator.cpp  arpeggiator.h  audiobuffer.cpp  audiobuffer.h  audiochannel.cpp  audiochannel.h  audioengine.cpp  audioengine.h  baseaudioevent.cpp  baseaudioevent.h  basecacheableaudioevent.h  baseinstrument.h  baseprocessor.h  bitcrusher.cpp  bitcrusher.h  bufferutility.cpp  bufferutility.h  compressor.cpp  compressor.h  dcoffsetfilter.cpp  dcoffsetfilter.h  decimator.h  delay.cpp  delay.h  diskwriter.cpp  diskwriter.h  druminstrument.cpp  druminstrument.h  drumpattern.cpp  drumpattern.h  envelopefollower.cpp  filter.cpp  finalizer.h  fm.cpp  (+54 more)
jni/definitions/: notifications.h  waveforms.h
jni/drivers/: aaudio.c  aaudio.h  aaudio_io.cpp  aaudio_io.h  adapter.cpp  adapter.h  opensl_io.c
jni/events/: baseaudioevent.cpp  baseaudioevent.h  basecacheableaudioevent.cpp  basecacheableaudioevent.h  basesynthevent.cpp  basesynthevent.h  drumevent.cpp  drumevent.h  sampleevent.cpp  sampleevent.h  synthevent.cpp  synthevent.h
jni/generators/: envelopegenerator.cpp  envelopegenerator.h  synthesizer.cpp  synthesizer.h  wavegenerator.cpp  wavegenerator.h
jni/instruments/: baseinstrument.cpp  baseinstrument.h  druminstrument.cpp  druminstrument.h  oscillatorproperties.cpp  oscillatorproperties.h  oscillatortuning.cpp  oscillatortuning.h  sampledinstrument.cpp  sampledinstrument.h  synthinstrument.cpp  synthinstrument.h
jni/jni/: java_interface_wrap.cpp  javabridge.cpp  javabridge.h  javabridge_api.h  javautilities.cpp  javautilities.h
jni/messaging/: notifier.cpp  notifier.h  observer.cpp  observer.h
jni/modules/: adsr.cpp  adsr.h  arpeggiator.cpp  arpeggiator.h  envelopefollower.cpp  envelopefollower.h  lfo.cpp  lfo.h  routeableoscillator.h
jni/processors/: baseprocessor.cpp  baseprocessor.h  delay.cpp  (+27 more)
mwengine/: CMakeLists.txt  build.gradle
mwengine_example/: build.gradle
src/: build.sh
src/main/cpp/: Android.mk  Application.mk  CMakeLists.txt  audiobuffer.cpp  audiobuffer.h  audiochannel.cpp  audiochannel.h  audioengine.cpp  audioengine.h  channelgroup.cpp  channelgroup.h  global.cpp  global.h  mwengine.i  processingchain.cpp  processingchain.h  project.properties  ringbuffer.cpp  ringbuffer.h  sequencer.cpp  sequencer.h  sequencercontroller.cpp  sequencercontroller.h  wavetable.cpp  wavetable.h
src/main/cpp/definitions/: drivers.h  libraries.cpp  libraries.h  notifications.h  pitch.cpp  pitch.h  waveforms.h  wavetables.h
src/main/cpp/drivers/: aaudio_io.cpp  aaudio_io.h  adapter.cpp  adapter.h  mock_io.cpp  mock_io.h  opensl_io.c
src/main/cpp/events/: baseaudioevent.cpp  baseaudioevent.h  basecacheableaudioevent.cpp  basecacheableaudioevent.h  basesynthevent.cpp  basesynthevent.h  drumevent.cpp  drumevent.h  sampleevent.cpp  sampleevent.h  synthevent.h
src/main/cpp/generators/: envelopegenerator.cpp  envelopegenerator.h  synthesizer.cpp  synthesizer.h  wavegenerator.cpp  wavegenerator.h
src/main/cpp/instruments/: baseinstrument.cpp  baseinstrument.h  druminstrument.cpp  druminstrument.h  oscillatorproperties.cpp  oscillatorproperties.h  sampledinstrument.cpp  sampledinstrument.h  synthinstrument.cpp  synthinstrument.h
src/main/cpp/jni/: Application.mk  java_interface_wrap.cpp  javabridge.cpp  javabridge.h  javabridge_api.h  javautilities.cpp  javautilities.h
src/main/cpp/messaging/: notifier.cpp  notifier.h
src/main/cpp/modules/: adsr.cpp  adsr.h  arpeggiator.h  envelopefollower.cpp  envelopefollower.h  lfo.cpp  lfo.h  routeableoscillator.cpp
src/main/cpp/processors/: allpass.cpp  allpass.h  baseprocessor.cpp  baseprocessor.h  bitcrusher.cpp  bitcrusher.h  comb.cpp  comb.h  dcoffsetfilter.cpp  dcoffsetfilter.h  decimator.h  delay.cpp  delay.h  filter.cpp  filter.h  flanger.cpp  flanger.h  fm.h  formantfilter.cpp  formantfilter.h  glitcher.cpp  glitcher.h  limiter.cpp  limiter.h  lowpassfilter.cpp  lowpassfilter.h  lpfhpfilter.cpp  lpfhpfilter.h  phaser.cpp  phaser.h  pitchshifter.cpp  pitchshifter.h  reverb.cpp  reverb.h  reverb2.cpp  reverb2.h  reverbsm.cpp  reverbsm.h  revmodel.cpp  revmodel.h  (+5 more)
src/main/cpp/services/: library_loader.cpp  library_loader.h
src/main/cpp/tests/: audiobuffer_test.cpp  audioengine_test.cpp  channelgroup_test.cpp  deprecation_test.cpp  main.cpp  processingchain_test.cpp  sequencer_test.cpp  sequencercontroller_test.cpp
src/main/cpp/tests/benchmarks/: buffer_test.cpp  inline_test.cpp  table_test.cpp
src/main/cpp/tests/events/: baseaudioevent_test.cpp  basesynthevent_test.cpp  drumevent_test.cpp  sampleevent_test.cpp
src/main/cpp/tests/generators/: envelopegenerator_test.cpp
src/main/cpp/tests/helpers/: helper.cpp  mock_opensl_io.cpp  mock_opensl_io.h
src/main/cpp/tests/instruments/: baseinstrument_test.cpp  sampledinstrument_test.cpp  synthinstrument_test.cpp
src/main/cpp/tests/modules/: adsr_test.cpp  lfo_test.cpp
src/main/cpp/tests/processors/: baseprocessor_test.cpp  bitcrusher_test.cpp  dcoffsetfilter_test.cpp  delay_test.cpp  filter_test.cpp  flanger_test.cpp  glitcher_test.cpp  limiter_test.cpp  phaser_test.cpp  reverb_test.cpp  reverbsm_test.cpp  tremolo_test.cpp  waveshaper_test.cpp
src/main/cpp/tests/utilities/: eventutility_test.cpp  fastmath_test.cpp  samplemanager_test.cpp  tablepool_test.cpp  volumeutil_test.cpp
src/main/cpp/utilities/: bufferpool.cpp  bufferpool.h  bufferutility.cpp  bufferutility.h  bulkcacher.cpp  channelutility.h  debug.cpp  debug.h  diskwriter.cpp  diskwriter.h  eventutility.cpp  eventutility.h  fastmath.h  levelutility.cpp  perfutility.h  samplemanager.cpp  samplemanager.h  sampleutility.h  stringutility.h  tablepool.cpp  utils.cpp  utils.h  volumeutil.h  wavereader.cpp  wavereader.h  waveutil.h  wavewriter.cpp  wavewriter.h
(+418 files in other folders)
